# tlock-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  TODO  makefile  rustfmt.toml  scoping.md  shell.nix
.github/workflows/: rust.yml
cf-pages/: wrangler.toml
crates/erc20s/: Cargo.toml
crates/erc20s/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: host.rs  host_state.rs  lib.rs
crates/tlock-alloy/: Cargo.toml
crates/tlock-alloy/src/: eth_request.rs  lib.rs  serde_helpers.rs
crates/tlock-api/: Cargo.toml
crates/tlock-api/src/: caip.rs  component.rs  domains.rs  entities.rs  lib.rs  rpc_batch.rs
crates/tlock-hdk/: Cargo.toml
crates/tlock-hdk/src/: lib.rs  server.rs
crates/tlock-pdk/: Cargo.toml
crates/tlock-pdk/src/: lib.rs  runner.rs  server.rs  state.rs
docs/: ARCHITECTURE.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  SECURITY.md  design-considerations.md  interfaces.md  problems.md  resource-management.md  status-quo.md  vault_architecture.md
docs/internal/: README.md  claude_research_wallet_extensions.md  resource-management.md  secure-wallet-development.md  state.md  vault_architecture.md
frontend/: .gitignore  Cargo.toml  Dioxus.toml  input.css
frontend/assets/: daisyui.js  tailwind.css
frontend/assets/plugins/: manifest.json
frontend/assets/states/: staking.json  swapping.json
frontend/public/: site.webmanifest
frontend/public/states/: manifest.json  sandbox.json  staking.json  swapping.json
frontend/src/: download_util.rs  focus_helper.rs  lib.rs  main.rs
frontend/src/components/: component.rs  container.rs  entity.rs  eth_provider.rs  log_fut.rs  mod.rs  page.rs  vault.rs
frontend/src/components/user_requests/: eth_provider.rs  mod.rs  vault.rs
frontend/src/contexts/: host.rs  mod.rs  toast.rs
host/: Cargo.toml  plugin.rs  plugin.wasm
host/src/: host.rs  main.rs  plugin.rs  router.rs
plugins/.cargo/: config.toml
plugins/demo-keyring/: Cargo.toml
plugins/demo-keyring/src/: lib.rs  main.rs
plugins/eoa-coordinator/: Cargo.toml
plugins/eoa-coordinator/src/: main.rs
plugins/eoa-vault/: Cargo.toml
plugins/eoa-vault/src/: main.rs
plugins/eth-provider/: Cargo.toml
plugins/eth-provider/src/: alloy_provider.rs  main.rs
plugins/example-vault/: Cargo.toml
plugins/example-vault/src/: main.rs
plugins/plugin/: Cargo.toml
plugins/plugin-template/: Cargo.toml
plugins/plugin-template/src/: main.rs
plugins/plugin/src/: json_rpc_transport.rs  lib.rs  main.rs  plugin_handler.rs  transport.rs
plugins/revm-provider/: Cargo.toml  README.md
plugins/revm-provider/src/: alloydb.rs  cache_db.rs  chain.rs  layered_db.rs  main.rs  provider.rs  provider_snapshot.rs  remote_db.rs  rpc.rs  state.rs
plugins/rpc-provider/: Cargo.toml
plugins/rpc-provider/src/: alloy_provider.rs  main.rs
plugins/staking/: Cargo.toml
plugins/staking/src/: main.rs
plugins/uniswap-plugin/: Cargo.toml
plugins/uniswap-plugin/src/: main.rs
plugins/uniswap-v2/: Cargo.toml
plugins/uniswap-v2/src/: main.rs
plugins/vault-page/: Cargo.toml
plugins/vault-page/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tlock-alloy/: Cargo.toml
tlock-alloy/src/: eth_request.rs  lib.rs  serde_helpers.rs
tlock-api/: Cargo.toml
tlock-api/src/: caip.rs  component.rs  domains.rs  eip155_keyring.rs  eip155_provider.rs  entities.rs  flex_array.rs  global.rs  lib.rs  methods.rs  namespace_eth.rs  namespace_global.rs  namespace_plugin.rs  plugin.rs  routes.rs  tlock.rs
tlock-api/src/domains/: eip155_keyring.rs  host.rs  mod.rs  tlock.rs
tlock-hdk/: Cargo.toml
tlock-hdk/src/: dispatcher.rs  lib.rs  plugin.rs  plugin_instance.rs  server.rs  typed_plugin.rs
tlock-pdk/: Cargo.toml
tlock-pdk/src/: async_pipe.rs  dispatcher.rs  json_rpc_transport.rs  lib.rs  multiplexer.rs  non_blocking_pipe.rs  plugin.rs  plugin_client.rs  plugin_factory.rs  plugin_handler.rs  plugin_host.rs  request_handler.rs  rpc_message.rs  runtime.rs  server.rs  state.rs  transport.rs  typed_host.rs  typed_plugin.rs
tlock-pdk/src/api/: eth.rs  methods.rs  mod.rs
tlock-pdk/src/transport/: json_rpc_transport.rs  mod.rs
wasmi/: README.md
wasmi-async/: Cargo.toml
wasmi-async/src/: wasmi.rs
wasmi/rpc-namespace/: Cargo.toml
wasmi/rpc-namespace/src/: lib.rs
wasmi/runtime/: Cargo.toml
wasmi/runtime/src/: lib.rs
wasmi/test-plugin/: Cargo.toml
wasmi/test-plugin/src/: main.rs
wasmi/wasmi-async/: Cargo.toml  README.md
wasmi/wasmi-async/src/: lib.rs  non_blocking_pipe.rs  wasmi.rs  wasmi_wasi.rs
wasmi/wasmi-hdk/: Cargo.toml  makefile
wasmi/wasmi-hdk/benches/: benchmark.rs  plugin_benchmark.rs
wasmi/wasmi-hdk/src/: compiled_plugin.rs  host_handler.rs  lib.rs  non_blocking_pipe.rs  plugin.rs  plugin_instance.rs  server.rs
wasmi/wasmi-hdk/src/wasi/: wasi.rs  wasmi.rs
wasmi/wasmi-hdk/tests/: integration.rs
wasmi/wasmi-pdk/: Cargo.toml
wasmi/wasmi-pdk/src/: api.rs  flex_array.rs  lib.rs  params.rs  plugin_factory.rs  rpc_message.rs  server.rs  transport.rs
