[workspace]
members = [
    "frontend",
    "crates/host",
    "plugins/eoa-vault",
    "plugins/eth-provider",
    "plugins/plugin-template",
    "plugins/vault-page",
    "plugins/eoa-coordinator",
    "crates/tlock-alloy",
    "crates/tlock-api",
    "crates/tlock-hdk",
    "crates/tlock-pdk",
]

resolver = "2"

[workspace.lints.rust]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
alloy = { version = "1.1", features = ["wasm-bindgen", "json-rpc", "rpc-types-trace", "eip712"] }
async-trait = "0.1"
dioxus = { version = "=0.7.1" }
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
host = { path = "./crates/host" }
rand = "0.9"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tlock-alloy = { path = "./crates/tlock-alloy" }
tlock-api = { path = "./crates/tlock-api" }
tlock-hdk = { path = "./crates/tlock-hdk" }
tlock-pdk = { path = "./crates/tlock-pdk" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "v4", "serde", "js" ] } 
wasmi-plugin-hdk = { version = "0.1" }
wasmi-plugin-pdk = { version = "0.1" }

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.crates-io]
alloy = { git = "https://github.com/Robert-MacWha/alloy", branch = "wasm32-wasip-support" }

# alloy = { path = "../alloy/crates/alloy" }