[workspace]
members = [
    "crates/host",
    "crates/tlock-alloy",
    "crates/tlock-api",
    "crates/tlock-hdk",
    "crates/tlock-pdk",
    "crates/erc20s",
    "frontend",
    "plugins/eoa-coordinator",
    "plugins/eoa-vault",
    "plugins/plugin-template",
    "plugins/revm-provider",
    "plugins/rpc-provider",
    "plugins/uniswap-v2",
]

resolver = "2"

[workspace.lints.rust]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
alloy = { version = "1.4", features = ["wasm-bindgen", "json-rpc", "rpc-types-trace", "eip712"] }
alloy-consensus = { version = "1.4" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
dioxus = { version = "=0.7.1" }
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
host = { path = "./crates/host" }
rand = "0.9"
reqwest = "0.12"
revm = { version = "33.1.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tlock-alloy = { path = "./crates/tlock-alloy" }
tlock-api = { path = "./crates/tlock-api" }
tlock-hdk = { path = "./crates/tlock-hdk" }
tlock-pdk = { path = "./crates/tlock-pdk" }
erc20s = { path = "./crates/erc20s" }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "v4", "serde", "js" ] } 
wasm-bindgen = "0.2"
wasmi-plugin-hdk = "0.1"
wasmi-plugin-pdk = "0.1"
web-sys = "0.3"
hex = "0.4"
chrono = "0.4"
console_error_panic_hook = "0.1"
event-listener = "5"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "none"
debug = "line-tables-only"

[profile.dev]
debug = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.crates-io]
# wasmi-plugin-hdk = { git = "https://github.com/Robert-MacWha/wasmi-plugin-framework", branch = "wasmer-shared-memory-test" }
# wasmi-plugin-pdk = { git = "https://github.com/Robert-MacWha/wasmi-plugin-framework", branch = "wasmer-shared-memory-test" }
wasmi-plugin-hdk = { path = "../wasmi-plugin-framework/crates/wasmi-plugin-hdk" }
wasmi-plugin-pdk = { path = "../wasmi-plugin-framework/crates/wasmi-plugin-pdk" }
