[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
dioxus = { workspace = true }
futures = { workspace = true }
gloo-timers = { workspace = true }
host = { workspace = true }
tlock-hdk = { workspace = true }
