[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
dioxus = { workspace = true }
erc20s = { workspace = true }
futures = { workspace = true }
gloo-timers = { workspace = true }
host = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
tlock-hdk = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "BlobPropertyBag",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document"
] }
uuid = { workspace = true }
hex = { workspace = true }
console_error_panic_hook = { workspace = true }
reqwest = { workspace = true }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
