[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-hdk = { workspace = true }
wasmi-async = { workspace = true }
alloy = { workspace = true }
simple_logger = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gloo-timers = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }