[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
futures = { workspace = true }
gloo-timers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple_logger = { workspace = true }
thiserror = { workspace = true }
tlock-hdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wasmi-async = { workspace = true }
