[package]
name = "tlock-alloy"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-pdk = { path = "../tlock-pdk" }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
alloy = { path = "../../alloy/crates/alloy" }
alloy-json-rpc = { path = "../../alloy/crates/json-rpc" }
alloy-dyn-abi = { version = "1.4.1", features = ["eip712"] }
alloy-rpc-types-trace = "1.1.2"
tower-service = "0.3.3"

[build]
target = "wasm32-wasip1"
