[package]
name = "tlock-api"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmi-pdk = { path="../wasmi/wasmi-pdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.12"
strum = "0.27.2"
strum_macros = "0.27.2"
async-trait = "0.1.89"
alloy-rpc-types = "1.0.30"
alloy-primitives = "1.3.1"
alloy-dyn-abi = { version = "1.3.1", features=["eip712"] }