[package]
name = "tlock-api"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmi-pdk = { path="../wasmi/wasmi-pdk" }
wasmi-hdk = { path="../wasmi/wasmi-hdk" }
rpc-namespace = { path="../wasmi/rpc-namespace" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
async-trait = "0.1.89"
alloy = "1.0.38"
http-serde = "2.1.1"