[package]
name = "tlock-api"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmi-pdk = { path="../wasmi/wasmi-pdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
async-trait = "0.1.89"
alloy = "1.1.2"
uuid = { version = "1.18.1", features = [ "v4", "serde", "js" ] } 