[package]
name = "tlock-pdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-api = { path = "../tlock-api" }
wasmi-pdk = { path = "../wasmi/wasmi-pdk" }
async-trait = "0.1.89"
futures = "0.3.31"
serde_json = "1.0.142"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
stderrlog = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.47.1", features = ["full"]}
