[package]
name = "wasmi-async"
version = "0.1.0"
edition = "2024"

[features]
default = ["smol-runtime"]
smol-runtime = ["smol"]
tokio-runtime = ["tokio"]

[dependencies]
runtime = { path = "../runtime" }
wasmi = "0.51.0"
wasmi_wasi = "0.51.0"
thiserror = "2.0.12"
smol = { version = "2.0", optional = true }
tokio = { version = "1.0", optional = true, features = ["rt", "macros"] }