[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
futures = { workspace = true }
tlock-hdk = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }