[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tlock-hdk = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }