[package]
name = "tlock-alloy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tlock-pdk = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }

[build]
target = "wasm32-wasip1"
