[package]
name = "tlock-pdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tlock-api = { workspace = true }
tracing = { workspace = true }
wasmi-plugin-pdk = { workspace = true }
