[package]
name = "eoa-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tlock-pdk = { path = "../../tlock-pdk" }
tlock-alloy = { path = "../../tlock-alloy" }
alloy = "1.1.2"
k256 = "0.13.4"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[build]
target = "wasm32-wasip1"