[package]
name = "eoa-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.1.2"
k256 = "0.13.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tlock-alloy = { path = "../../tlock-alloy" }
tlock-pdk = { path = "../../tlock-pdk" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[build]
target = "wasm32-wasip1"
