[package]
name = "eoa-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
tlock-alloy = { workspace = true }
tlock-pdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build]
target = "wasm32-wasip1"
