[package]
name = "eth-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-pdk = { path = "../../tlock-pdk" }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
alloy = "1.0.38"
alloy-json-rpc = "1.0.38"
tower-service = "0.3.3"

[build]
target = "wasm32-wasip1"
