[package]
name = "eth-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-pdk = { path = "../../tlock-pdk" }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
alloy = { path = "../../../alloy/crates/alloy" }
alloy-json-rpc = { path = "../../../alloy/crates/json-rpc" }
tower-service = "0.3.3"

[build]
target = "wasm32-wasip1"
