[package]
name = "revm-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tlock-pdk = { workspace = true }
tlock-alloy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
revm = { workspace = true, features = ["std", "serde"] }
thiserror = { workspace = true }
