[package]
name = "revm-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tlock-pdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
