[package]
name = "rpc-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tlock-pdk = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
