[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.47.1", features = ["rt", "macros"]}
