[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = { workspace = true }
gloo-timers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.47.1", features = ["rt", "macros"]}
