[package]
name = "wasmi-async"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime = { workspace = true }
wasmi = { workspace = true }
tokio = { workspace = true }
wasm-bindgen-futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
gloo-timers = { workspace = true }