[package]
name = "wasmi-hdk"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "profile_prime_sieve"
path = "src/bin/profile_prime_sieve.rs"
required-features = ["tokio-runtime"]

[dependencies]
runtime = { path = "../runtime" }
wasmi-pdk = { path = "../wasmi-pdk" }
wasmi-async = { path = "../wasmi-async" }
wasmi = "0.51.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tracing = "0.1.41"
futures = "0.3.31"
web-time = "1.1.0"

# Disables criterion for wasm targets since it's not compatible
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.7.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"