[package]
name = "wasmi-hdk"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "profile_prime_sieve"
path = "src/bin/profile_prime_sieve.rs"
required-features = ["tokio-runtime"]

[dependencies]
runtime = { workspace = true }
wasmi-pdk = { workspace = true }
wasmi-async = { workspace = true }
wasmi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
web-time = { workspace = true }

# Disables criterion for wasm targets since it's not compatible
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.7.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"