[package]
name = "wasmi-hdk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "profile_prime_sieve"
path = "src/bin/profile_prime_sieve.rs"
required-features = ["tokio-runtime"]

[dependencies]
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmi = { workspace = true }
wasmi-async = { workspace = true }
wasmi-pdk = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

# Disables criterion for wasm targets since it's not compatible
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmark"
harness = false
