[package]
name = "wasmi-pdk"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime = { path = "../runtime" }
thiserror = "2.0.12"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
futures = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
