[package]
name = "wasmi-pdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
